testing library creation

--- a/Libraries/web scraping/Amazon Flipkart Price finder (requests,bs4).ipynb
+++ b/Libraries/web scraping/Amazon Flipkart Price finder (requests,bs4).ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the Amazon/Flipkart url: http://dl.flipkart.com/dl/honor-9n-sapphire-blue-64-gb/p/itmf9pgsehv6nmss\n",
-      "Honor 9N (Sapphire Blue, 32 GB)  (3 GB RAM) costs Rs. ₹8,499\n"
+      "Enter the Amazon/Flipkart url: https://www.amazon.in/dp/B07M9FDGJQ/\n",
+      "ASUS F570 ( AMD Quad Core R5-2500 /8 GB/1TB / 15.6\" FHD/ Windows 10/ 4GB GTX 1050) Gaming Laptop F570ZD- DM226T ( Black /1.9 kg) costs Rs. ₹ 50,500.00\n"
      ]
     }
    ],
@@ -59,6 +59,13 @@
     "price = allocator(url)\n",
     "print(price.get('name', 'Undefined')+' costs Rs. '+price.get('price','Undefined'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
