Classes and libraries

--- a/Libraries/web scraping/Quick Google (requests, webbrowser, bs4).ipynb
+++ b/Libraries/web scraping/Quick Google (requests, webbrowser, bs4).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -21,25 +21,28 @@
     "\n",
     "import sys, requests, webbrowser, bs4\n",
     "\n",
+    "headers = {\n",
+    "        'User-Agent': 'Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36',\n",
+    "}\n",
     "print('Googling...') # display text while downloading the Google page\n",
-    "res = requests.get('http://google.com/search?q=' + ' '.join(sys.argv[1:]))\n",
+    "res = requests.get('http://google.com/search?q=' + ' '.join(sys.argv[1:]), headers=headers)\n",
     "res.raise_for_status()\n",
     "\n",
     "# Retrieve top search result links.\n",
     "soup = bs4.BeautifulSoup(res.text, 'html.parser')\n",
     "\n",
     "# Identify all results.\n",
-    "linkElems = soup.select('.r a')\n",
+    "linkElems = soup.select('.r > a')\n",
     "\n",
     "# Open a browser tab for top 5 results\n",
     "numOpen = min(5, len(linkElems))\n",
     "for i in range(numOpen):\n",
-    "    webbrowser.open('http://google.com' + linkElems[i].get('href'))"
+    "    webbrowser.open(linkElems[i].get('href'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -53,13 +56,6 @@
    "source": [
     "! python quick_google.py yahoo"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
