--- a/Notes/OOPS/Basics.ipynb
+++ b/Notes/OOPS/Basics.ipynb
@@ -4,8 +4,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Problem 1\n",
-    "Fill in the Line class methods to accept coordinates as a pair of tuples and return the slope and distance of the line."
+    "# Dog "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Woof!, my name is sammy and number is 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Dog():\n",
+    "    # class variable\n",
+    "    # same for any instance of class\n",
+    "    species = 'mammal' # don't define lists here cuz one object can change the list of another object\n",
+    "    \n",
+    "    def __init__(self,breed,name,spots):\n",
+    "        self.breed = breed\n",
+    "        self.name=name\n",
+    "        self.spots=spots\n",
+    "    \n",
+    "    def bark(self,number):\n",
+    "        print(f'Woof!, my name is {self.name} and number is {number}')\n",
+    "\n",
+    "mydog = Dog(breed='lab',name='sammy',spots=True)\n",
+    "mydog.bark(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Circle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14\n",
+      "30\n",
+      "188.4\n",
+      "2826.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Circle():\n",
+    "    # class object attribute\n",
+    "    pi = 3.14\n",
+    "    \n",
+    "    def __init__(self,radius=1):\n",
+    "        self.radius = radius\n",
+    "        # since radius has been assigned already, we can call\n",
+    "        # the self.radius or the radius argument itself\n",
+    "        self.area = self.radius*self.radius*self.pi\n",
+    "        # we can call a class attribute either via self or Class name\n",
+    "        self.area = radius*radius*Circle.pi\n",
+    "    \n",
+    "    def get_circumference(self):\n",
+    "        return self.radius*self.pi*2\n",
+    "\n",
+    "myCircle = Circle(30)\n",
+    "print(myCircle.pi)\n",
+    "print(myCircle.radius)\n",
+    "print(myCircle.get_circumference())\n",
+    "print(myCircle.area)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Line\n",
+    "Line class methods acceptS coordinates as a pair of tuples and return the slope and distance of the line."
    ]
   },
   {
@@ -17,7 +101,7 @@
     "class Line:\n",
     "    \n",
     "    def __init__(self,coor1,coor2):\n",
-    "        self.x1,self.y1 = coor1\n",
+    "        self.x1,self.y1 = coor1 # TUPLE UNPACKING\n",
     "        self.x2,self.y2 = coor2\n",
     "    \n",
     "    def distance(self):\n",
@@ -86,14 +170,7 @@
    "metadata": {},
    "source": [
     "________\n",
-    "#### Problem 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fill in the class "
+    "# Cylinder"
    ]
   },
   {
@@ -165,13 +242,6 @@
    "source": [
     "c.surface_area()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
