--- a/Notes/OOPS/Inheritance, Abstract Class, Polymorphism, __init__.ipynb
+++ b/Notes/OOPS/Inheritance, Abstract Class, Polymorphism, __init__.ipynb
@@ -4,96 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Class for dog"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Woof!, my name is sammy and number is 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "class Dog():\n",
-    "    # class variable\n",
-    "    # same for any instance of class\n",
-    "    species = 'mammal' # don't define lists here cuz one object can change the list of another object\n",
-    "    \n",
-    "    def __init__(self,breed,name,spots):\n",
-    "        self.breed = breed\n",
-    "        self.name=name\n",
-    "        self.spots=spots\n",
-    "    \n",
-    "    def bark(self,number):\n",
-    "        print(f'Woof!, my name is {self.name} and number is {number}')\n",
-    "\n",
-    "mydog = Dog(breed='lab',name='sammy',spots=True)\n",
-    "mydog.bark(2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Class for circle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.14\n",
-      "30\n",
-      "188.4\n",
-      "2826.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "class Circle():\n",
-    "    # class object attribute\n",
-    "    pi = 3.14\n",
-    "    \n",
-    "    def __init__(self,radius=1):\n",
-    "        self.radius = radius\n",
-    "        # since radius has been assigned already, we can call\n",
-    "        # the self.radius or the radius argument itself\n",
-    "        self.area = self.radius*self.radius*self.pi\n",
-    "        self.area = radius*radius*Circle.pi\n",
-    "    \n",
-    "    def get_circumference(self):\n",
-    "        return self.radius*self.pi*2\n",
-    "\n",
-    "myCircle = Circle(30)\n",
-    "print(myCircle.pi)\n",
-    "print(myCircle.radius)\n",
-    "print(myCircle.get_circumference())\n",
-    "print(myCircle.area)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Inheritance\n",
+    "# Inheritance and `__init__`\n",
     "When we call a function, python checks in the subclass if that function exists, if not, then it checks parent class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,12 +53,16 @@
     "class Cat(Animal):\n",
     "    # if we don't override __init__, then Animal's __init__ is called automatically\n",
     "    def speak(self):\n",
-    "        print(f'Meow!, said {self.name}')"
+    "        print(f'Meow!, said {self.name}')\n",
+    "        \n",
+    "    # polymorphism, since dog class also has same function name\n",
+    "    def bark(self):\n",
+    "        print('I can\\'t bark, said cat')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +88,7 @@
        "'annie'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -283,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -300,10 +221,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I can't bark, said cat\n"
+     ]
+    }
+   ],
+   "source": [
+    "cattie.bark()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Abstract Classes\n",
+    "expect to have their functions overwritten by child class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal():\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def speak(self):\n",
+    "        raise NotImplementedError(\"Subclass must implement this abstract method\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "Subclass must implement this abstract method",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-c6c787e35104>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdoggie\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDog\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Fido'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mdoggie\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mspeak\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-3-3b21501c1767>\u001b[0m in \u001b[0;36mspeak\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mspeak\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Subclass must implement this abstract method\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNotImplementedError\u001b[0m: Subclass must implement this abstract method"
+     ]
+    }
+   ],
+   "source": [
+    "class Dog(Animal):\n",
+    "    pass\n",
+    "\n",
+    "doggie = Dog('Fido')\n",
+    "doggie.speak()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'issac says Meow!'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Cat(Animal):\n",
+    "    def speak(self):\n",
+    "        return self.name + ' says Meow!'\n",
+    "\n",
+    "cattie = Cat('issac')\n",
+    "cattie.speak()"
+   ]
   }
  ],
  "metadata": {
