--- a/Notes/Modules & Packages/Amazon Flipkart Price library/Test afprice.ipynb
+++ b/Notes/Modules & Packages/Amazon Flipkart Price library/Test afprice.ipynb
@@ -10,9 +10,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3b1d02d866a54db2b8a58e9f6f7a3044",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -21,7 +35,8 @@
       "Googling...\n",
       "Googling...\n",
       "Googling...\n",
-      "Googling...\n"
+      "Googling...\n",
+      "\n"
      ]
     },
     {
@@ -30,20 +45,21 @@
        "['https://www.amazon.in/b?ie=UTF8&node=6755479031',\n",
        " 'https://www.flipkart.com/cat/p/itme935yfgharjkz',\n",
        " 'https://www.amazon.in/Toys-Games/b?ie=UTF8&node=1350380031',\n",
-       " 'https://www.flipkart.com/automotive/car-bike-accessories/car-bike-care/pr?sid=0hx%2Cbwd%2Cbyn',\n",
-       " 'https://www.amazon.in/Hero-Splendor-PLUS-Cover-Black/dp/B01LXVRJKH']"
+       " 'https://www.flipkart.com/automotive/car-bike-accessories/pr?sid=0hx%2Cbwd',\n",
+       " 'https://www.amazon.in/Hero-Honda-Motorcycles-Books-LLC/dp/1158625634']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import tqdm\n",
     "from afprice import searchToUrl\n",
     "terms = ['dog', 'cat', 'toy', 'bike', 'hero honda']\n",
     "sites = ['Amazon', 'Flipkart', 'Amazon', 'Flipkart', 'Amazon']\n",
-    "urls = [searchToUrl.searchToUrl(term, site) for term, site in zip(terms, sites)]\n",
+    "urls = [searchToUrl.searchToUrl(term, site) for term, site in tqdm.auto.tqdm(zip(terms, sites))]\n",
     "urls"
    ]
   },
@@ -189,6 +205,59 @@
    ],
    "source": [
     "dir(afprice._amazon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['TMonitor',\n",
+       " 'TqdmDeprecationWarning',\n",
+       " 'TqdmExperimentalWarning',\n",
+       " 'TqdmKeyError',\n",
+       " 'TqdmMonitorWarning',\n",
+       " 'TqdmSynchronisationWarning',\n",
+       " 'TqdmTypeError',\n",
+       " 'TqdmWarning',\n",
+       " '__all__',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__path__',\n",
+       " '__spec__',\n",
+       " '__version__',\n",
+       " '_main',\n",
+       " '_monitor',\n",
+       " '_tqdm',\n",
+       " '_tqdm_gui',\n",
+       " '_tqdm_pandas',\n",
+       " '_utils',\n",
+       " '_version',\n",
+       " 'main',\n",
+       " 'tgrange',\n",
+       " 'tnrange',\n",
+       " 'tqdm',\n",
+       " 'tqdm_gui',\n",
+       " 'tqdm_notebook',\n",
+       " 'tqdm_pandas',\n",
+       " 'trange']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(tqdm)"
    ]
   },
   {
