--- a/Notes/Jupyter Magic.ipynb
+++ b/Notes/Jupyter Magic.ipynb
@@ -5,26 +5,9 @@
    "metadata": {},
    "source": [
     "# Creating a file using Jupyter notebook's magic\n",
-    "The magic needs to be the first line"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing demofile.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile demofile.txt\n",
-    "stuff inside the file\n",
-    "2 lines of stuff"
+    "The magic needs to be the first line\n",
+    "\n",
+    "Source of all info: https://nbviewer.jupyter.org/github/ipython/ipython/blob/6.x/examples/IPython%20Kernel/Index.ipynb"
    ]
   },
   {
@@ -190,6 +173,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Writing to a file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing demofile.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile demofile.txt\n",
+    "stuff inside the file\n",
+    "2 lines of stuff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Command Line\n",
     "Here we run our script from the command line. The exclamation point is a Jupyter trick that lets you run command line statements from inside a jupyter cell."
    ]
@@ -232,8 +241,9 @@
    "metadata": {},
    "source": [
     "# Images\n",
-    "## Markdown\n",
-    "![XOR truth table](https://www.electronicshub.org/wp-content/uploads/2015/07/TRUTH-TABLE-1.jpg)"
+    "### Markdown\n",
+    "![XOR truth table](https://www.electronicshub.org/wp-content/uploads/2015/07/TRUTH-TABLE-1.jpg)\n",
+    "### `IPython.display`"
    ]
   },
   {
@@ -256,6 +266,62 @@
    "source": [
     "from IPython.display import Image\n",
     "Image(\"https://www.electronicshub.org/wp-content/uploads/2015/07/TRUTH-TABLE-1.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Matplotlib\n",
+    "use the cell magic to activate it\n",
+    "```python\n",
+    "%matplotlib inline\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Timeit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.05 ms ± 49.7 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%timeit np.linalg.eigvals(np.random.rand(100,100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 ms ± 139 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit a = np.random.rand(100, 100)\n",
+    "np.linalg.eigvals(a)"
    ]
   },
   {
