Just Work in Progress

--- a/Notes/Misc.ipynb
+++ b/Notes/Misc.ipynb
@@ -290,14 +290,26 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "_single_leading_underscore: weak “internal use” indicator. E.g. from M import * does not import objects whose name starts with an underscore.\n",
+    "single_trailing_underscore_: used by convention to avoid conflicts with Python keyword, e.g.:\n",
+    "\n",
+    "Tkinter.Toplevel(master, class_='ClassName')\n",
+    "__double_leading_underscore: when naming a class attribute, invokes name mangling (inside class FooBar, __boo becomes _FooBar__boo; see below).\n",
+    "__double_leading_and_trailing_underscore__: “magic” objects or attributes that live in user-controlled namespaces. E.g. __init__, __import__ or __file__. Never invent such names; only use them as documented."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Python Containers\n",
     "https://stackoverflow.com/a/11576019/2365231\n",
-    "### Built in containers\n",
+    "## Built in containers\n",
     "\n",
-    "### collections module provides more containers"
+    "## collections module provides more containers"
    ]
   },
   {
@@ -330,226 +342,6 @@
     "The name comes from the phrase \"If it looks like a duck and quacks like a duck, it's a duck\".\n",
     "\n",
     "**Dynamic language**: At runtime, it executes many common programming behaviours that static programming languages would perform during compilation. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ArithmeticError', 'AssertionError', 'AttributeError', 'BaseException', 'BlockingIOError', 'BrokenPipeError', 'BufferError', 'BytesWarning', 'ChildProcessError', 'ConnectionAbortedError', 'ConnectionError', 'ConnectionRefusedError', 'ConnectionResetError', 'DeprecationWarning', 'EOFError', 'Ellipsis', 'EnvironmentError', 'Exception', 'False', 'FileExistsError', 'FileNotFoundError', 'FloatingPointError', 'FutureWarning', 'GeneratorExit', 'IOError', 'ImportError', 'ImportWarning', 'IndentationError', 'IndexError', 'InterruptedError', 'IsADirectoryError', 'KeyError', 'KeyboardInterrupt', 'LookupError', 'MemoryError', 'ModuleNotFoundError', 'NameError', 'None', 'NotADirectoryError', 'NotImplemented', 'NotImplementedError', 'OSError', 'OverflowError', 'PendingDeprecationWarning', 'PermissionError', 'ProcessLookupError', 'RecursionError', 'ReferenceError', 'ResourceWarning', 'RuntimeError', 'RuntimeWarning', 'StopAsyncIteration', 'StopIteration', 'SyntaxError', 'SyntaxWarning', 'SystemError', 'SystemExit', 'TabError', 'TimeoutError', 'True', 'TypeError', 'UnboundLocalError', 'UnicodeDecodeError', 'UnicodeEncodeError', 'UnicodeError', 'UnicodeTranslateError', 'UnicodeWarning', 'UserWarning', 'ValueError', 'Warning', 'WindowsError', 'ZeroDivisionError', '__IPYTHON__', '__build_class__', '__debug__', '__doc__', '__import__', '__loader__', '__name__', '__package__', '__spec__', 'abs', 'all', 'any', 'ascii', 'bin', 'bool', 'breakpoint', 'bytearray', 'bytes', 'callable', 'chr', 'classmethod', 'compile', 'complex', 'copyright', 'credits', 'delattr', 'dict', 'dir', 'display', 'divmod', 'enumerate', 'eval', 'exec', 'filter', 'float', 'format', 'frozenset', 'get_ipython', 'getattr', 'globals', 'hasattr', 'hash', 'help', 'hex', 'id', 'input', 'int', 'isinstance', 'issubclass', 'iter', 'len', 'license', 'list', 'locals', 'map', 'max', 'memoryview', 'min', 'next', 'object', 'oct', 'open', 'ord', 'pow', 'print', 'property', 'range', 'repr', 'reversed', 'round', 'set', 'setattr', 'slice', 'sorted', 'staticmethod', 'str', 'sum', 'super', 'tuple', 'type', 'vars', 'zip']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dir(__builtins__))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__add__',\n",
-       " '__class__',\n",
-       " '__contains__',\n",
-       " '__delattr__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getitem__',\n",
-       " '__getnewargs__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__len__',\n",
-       " '__lt__',\n",
-       " '__mod__',\n",
-       " '__mul__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__rmod__',\n",
-       " '__rmul__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " 'capitalize',\n",
-       " 'casefold',\n",
-       " 'center',\n",
-       " 'count',\n",
-       " 'encode',\n",
-       " 'endswith',\n",
-       " 'expandtabs',\n",
-       " 'find',\n",
-       " 'format',\n",
-       " 'format_map',\n",
-       " 'index',\n",
-       " 'isalnum',\n",
-       " 'isalpha',\n",
-       " 'isascii',\n",
-       " 'isdecimal',\n",
-       " 'isdigit',\n",
-       " 'isidentifier',\n",
-       " 'islower',\n",
-       " 'isnumeric',\n",
-       " 'isprintable',\n",
-       " 'isspace',\n",
-       " 'istitle',\n",
-       " 'isupper',\n",
-       " 'join',\n",
-       " 'ljust',\n",
-       " 'lower',\n",
-       " 'lstrip',\n",
-       " 'maketrans',\n",
-       " 'partition',\n",
-       " 'replace',\n",
-       " 'rfind',\n",
-       " 'rindex',\n",
-       " 'rjust',\n",
-       " 'rpartition',\n",
-       " 'rsplit',\n",
-       " 'rstrip',\n",
-       " 'split',\n",
-       " 'splitlines',\n",
-       " 'startswith',\n",
-       " 'strip',\n",
-       " 'swapcase',\n",
-       " 'title',\n",
-       " 'translate',\n",
-       " 'upper',\n",
-       " 'zfill']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(__doc__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a='3'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__add__',\n",
-       " '__class__',\n",
-       " '__contains__',\n",
-       " '__delattr__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getitem__',\n",
-       " '__getnewargs__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__len__',\n",
-       " '__lt__',\n",
-       " '__mod__',\n",
-       " '__mul__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__rmod__',\n",
-       " '__rmul__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " 'capitalize',\n",
-       " 'casefold',\n",
-       " 'center',\n",
-       " 'count',\n",
-       " 'encode',\n",
-       " 'endswith',\n",
-       " 'expandtabs',\n",
-       " 'find',\n",
-       " 'format',\n",
-       " 'format_map',\n",
-       " 'index',\n",
-       " 'isalnum',\n",
-       " 'isalpha',\n",
-       " 'isascii',\n",
-       " 'isdecimal',\n",
-       " 'isdigit',\n",
-       " 'isidentifier',\n",
-       " 'islower',\n",
-       " 'isnumeric',\n",
-       " 'isprintable',\n",
-       " 'isspace',\n",
-       " 'istitle',\n",
-       " 'isupper',\n",
-       " 'join',\n",
-       " 'ljust',\n",
-       " 'lower',\n",
-       " 'lstrip',\n",
-       " 'maketrans',\n",
-       " 'partition',\n",
-       " 'replace',\n",
-       " 'rfind',\n",
-       " 'rindex',\n",
-       " 'rjust',\n",
-       " 'rpartition',\n",
-       " 'rsplit',\n",
-       " 'rstrip',\n",
-       " 'split',\n",
-       " 'splitlines',\n",
-       " 'startswith',\n",
-       " 'strip',\n",
-       " 'swapcase',\n",
-       " 'title',\n",
-       " 'translate',\n",
-       " 'upper',\n",
-       " 'zfill']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(a)"
    ]
   },
   {
