--- a/Questions/MIT 6.001.ipynb
+++ b/Questions/MIT 6.001.ipynb
@@ -544,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Minimum monthly payments made"
+    "## Minimum monthly payments made"
    ]
   },
   {
@@ -595,12 +595,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fixed Monthly payments to clear debt in 12 months"
+    "## Fixed Monthly payments to clear debt in 12 months"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
