--- a/Notes/Understand parts of a module (dir).ipynb
+++ b/Notes/Understand parts of a module (dir).ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Legend\n",
+    "Entries in ALL CAPS are constants\n",
+    "\n",
+    "CapitalisedNames are classes\n",
+    "\n",
+    "Entries in lowerCase are methods\n",
+    "\n",
+    "This convention is used for special variables or methods (so-called “magic method”) such as `__init__`, `__len__`. These methods provides special syntactic features or does special things. For example, `__file__` indicates the location of Python file, `__eq__` is executed when a == b expression is excuted. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -122,20 +136,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Legend\n",
-    "Entries in ALL CAPS are constants\n",
-    "\n",
-    "CapitalisedNames are classes\n",
-    "\n",
-    "Entries in lowerCase are methods\n",
-    "\n",
-    "This convention is used for special variables or methods (so-called “magic method”) such as `__init__`, `__len__`. These methods provides special syntactic features or does special things. For example, `__file__` indicates the location of Python file, `__eq__` is executed when a == b expression is excuted. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -213,6 +213,436 @@
    ],
    "source": [
     "logging.critical"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Built ins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ArithmeticError',\n",
+       " 'AssertionError',\n",
+       " 'AttributeError',\n",
+       " 'BaseException',\n",
+       " 'BlockingIOError',\n",
+       " 'BrokenPipeError',\n",
+       " 'BufferError',\n",
+       " 'BytesWarning',\n",
+       " 'ChildProcessError',\n",
+       " 'ConnectionAbortedError',\n",
+       " 'ConnectionError',\n",
+       " 'ConnectionRefusedError',\n",
+       " 'ConnectionResetError',\n",
+       " 'DeprecationWarning',\n",
+       " 'EOFError',\n",
+       " 'Ellipsis',\n",
+       " 'EnvironmentError',\n",
+       " 'Exception',\n",
+       " 'False',\n",
+       " 'FileExistsError',\n",
+       " 'FileNotFoundError',\n",
+       " 'FloatingPointError',\n",
+       " 'FutureWarning',\n",
+       " 'GeneratorExit',\n",
+       " 'IOError',\n",
+       " 'ImportError',\n",
+       " 'ImportWarning',\n",
+       " 'IndentationError',\n",
+       " 'IndexError',\n",
+       " 'InterruptedError',\n",
+       " 'IsADirectoryError',\n",
+       " 'KeyError',\n",
+       " 'KeyboardInterrupt',\n",
+       " 'LookupError',\n",
+       " 'MemoryError',\n",
+       " 'ModuleNotFoundError',\n",
+       " 'NameError',\n",
+       " 'None',\n",
+       " 'NotADirectoryError',\n",
+       " 'NotImplemented',\n",
+       " 'NotImplementedError',\n",
+       " 'OSError',\n",
+       " 'OverflowError',\n",
+       " 'PendingDeprecationWarning',\n",
+       " 'PermissionError',\n",
+       " 'ProcessLookupError',\n",
+       " 'RecursionError',\n",
+       " 'ReferenceError',\n",
+       " 'ResourceWarning',\n",
+       " 'RuntimeError',\n",
+       " 'RuntimeWarning',\n",
+       " 'StopAsyncIteration',\n",
+       " 'StopIteration',\n",
+       " 'SyntaxError',\n",
+       " 'SyntaxWarning',\n",
+       " 'SystemError',\n",
+       " 'SystemExit',\n",
+       " 'TabError',\n",
+       " 'TimeoutError',\n",
+       " 'True',\n",
+       " 'TypeError',\n",
+       " 'UnboundLocalError',\n",
+       " 'UnicodeDecodeError',\n",
+       " 'UnicodeEncodeError',\n",
+       " 'UnicodeError',\n",
+       " 'UnicodeTranslateError',\n",
+       " 'UnicodeWarning',\n",
+       " 'UserWarning',\n",
+       " 'ValueError',\n",
+       " 'Warning',\n",
+       " 'WindowsError',\n",
+       " 'ZeroDivisionError',\n",
+       " '__IPYTHON__',\n",
+       " '__build_class__',\n",
+       " '__debug__',\n",
+       " '__doc__',\n",
+       " '__import__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'abs',\n",
+       " 'all',\n",
+       " 'any',\n",
+       " 'ascii',\n",
+       " 'bin',\n",
+       " 'bool',\n",
+       " 'breakpoint',\n",
+       " 'bytearray',\n",
+       " 'bytes',\n",
+       " 'callable',\n",
+       " 'chr',\n",
+       " 'classmethod',\n",
+       " 'compile',\n",
+       " 'complex',\n",
+       " 'copyright',\n",
+       " 'credits',\n",
+       " 'delattr',\n",
+       " 'dict',\n",
+       " 'dir',\n",
+       " 'display',\n",
+       " 'divmod',\n",
+       " 'enumerate',\n",
+       " 'eval',\n",
+       " 'exec',\n",
+       " 'filter',\n",
+       " 'float',\n",
+       " 'format',\n",
+       " 'frozenset',\n",
+       " 'get_ipython',\n",
+       " 'getattr',\n",
+       " 'globals',\n",
+       " 'hasattr',\n",
+       " 'hash',\n",
+       " 'help',\n",
+       " 'hex',\n",
+       " 'id',\n",
+       " 'input',\n",
+       " 'int',\n",
+       " 'isinstance',\n",
+       " 'issubclass',\n",
+       " 'iter',\n",
+       " 'len',\n",
+       " 'license',\n",
+       " 'list',\n",
+       " 'locals',\n",
+       " 'map',\n",
+       " 'max',\n",
+       " 'memoryview',\n",
+       " 'min',\n",
+       " 'next',\n",
+       " 'object',\n",
+       " 'oct',\n",
+       " 'open',\n",
+       " 'ord',\n",
+       " 'pow',\n",
+       " 'print',\n",
+       " 'property',\n",
+       " 'range',\n",
+       " 'repr',\n",
+       " 'reversed',\n",
+       " 'round',\n",
+       " 'set',\n",
+       " 'setattr',\n",
+       " 'slice',\n",
+       " 'sorted',\n",
+       " 'staticmethod',\n",
+       " 'str',\n",
+       " 'sum',\n",
+       " 'super',\n",
+       " 'tuple',\n",
+       " 'type',\n",
+       " 'vars',\n",
+       " 'zip']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(__builtins__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'capitalize',\n",
+       " 'casefold',\n",
+       " 'center',\n",
+       " 'count',\n",
+       " 'encode',\n",
+       " 'endswith',\n",
+       " 'expandtabs',\n",
+       " 'find',\n",
+       " 'format',\n",
+       " 'format_map',\n",
+       " 'index',\n",
+       " 'isalnum',\n",
+       " 'isalpha',\n",
+       " 'isascii',\n",
+       " 'isdecimal',\n",
+       " 'isdigit',\n",
+       " 'isidentifier',\n",
+       " 'islower',\n",
+       " 'isnumeric',\n",
+       " 'isprintable',\n",
+       " 'isspace',\n",
+       " 'istitle',\n",
+       " 'isupper',\n",
+       " 'join',\n",
+       " 'ljust',\n",
+       " 'lower',\n",
+       " 'lstrip',\n",
+       " 'maketrans',\n",
+       " 'partition',\n",
+       " 'replace',\n",
+       " 'rfind',\n",
+       " 'rindex',\n",
+       " 'rjust',\n",
+       " 'rpartition',\n",
+       " 'rsplit',\n",
+       " 'rstrip',\n",
+       " 'split',\n",
+       " 'splitlines',\n",
+       " 'startswith',\n",
+       " 'strip',\n",
+       " 'swapcase',\n",
+       " 'title',\n",
+       " 'translate',\n",
+       " 'upper',\n",
+       " 'zfill']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'capitalize',\n",
+       " 'casefold',\n",
+       " 'center',\n",
+       " 'count',\n",
+       " 'encode',\n",
+       " 'endswith',\n",
+       " 'expandtabs',\n",
+       " 'find',\n",
+       " 'format',\n",
+       " 'format_map',\n",
+       " 'index',\n",
+       " 'isalnum',\n",
+       " 'isalpha',\n",
+       " 'isascii',\n",
+       " 'isdecimal',\n",
+       " 'isdigit',\n",
+       " 'isidentifier',\n",
+       " 'islower',\n",
+       " 'isnumeric',\n",
+       " 'isprintable',\n",
+       " 'isspace',\n",
+       " 'istitle',\n",
+       " 'isupper',\n",
+       " 'join',\n",
+       " 'ljust',\n",
+       " 'lower',\n",
+       " 'lstrip',\n",
+       " 'maketrans',\n",
+       " 'partition',\n",
+       " 'replace',\n",
+       " 'rfind',\n",
+       " 'rindex',\n",
+       " 'rjust',\n",
+       " 'rpartition',\n",
+       " 'rsplit',\n",
+       " 'rstrip',\n",
+       " 'split',\n",
+       " 'splitlines',\n",
+       " 'startswith',\n",
+       " 'strip',\n",
+       " 'swapcase',\n",
+       " 'title',\n",
+       " 'translate',\n",
+       " 'upper',\n",
+       " 'zfill']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__call__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__name__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__qualname__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__self__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__text_signature__']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(bin)"
    ]
   },
   {
