--- a/Libraries/re/05-Regular Expressions - re.ipynb
+++ b/Libraries/re/05-Regular Expressions - re.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -197,23 +197,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['match']"
+       "['match', 'match']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Returns a list of all matches\n",
-    "re.findall('match','test phrase match is in middle')"
+    "re.findall('match','test phrase match is in middle, this match later on')"
    ]
   },
   {
