--- a/Libraries/re/Regex.ipynb
+++ b/Libraries/re/Regex.ipynb
@@ -9,59 +9,223 @@
     "\n",
     "Use [Regex101](https://regex101.com/) for live testing of a regex\n",
     "\n",
-    "## Python specific info\n",
+    "# Python specific info\n",
     "use the `r` at the start of the pattern string, that designates a python `raw` string which passes through backslashes\n",
     "\n",
-    "`re.search` finds just first instance. `re.findall` finds all"
+    "`re.findall` finds all"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Search"
+    "## Search\n",
+    "`re.search` finds just first instance. \n",
+    "\n",
+    "If match is found, a **matchobject** is returned else, **None** is returned"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "found word:cat\n"
+      "Found... word:cat\n"
      ]
     }
    ],
    "source": [
     "import re\n",
-    "str = 'an example word:cat!! another word:dog'\n",
-    "mat = re.search(r'word:\\w+', str,re.IGNORECASE)\n",
+    "\n",
+    "string = 'an example word:cat!! another word:dog'\n",
+    "match = re.search(r'(word):(\\w+)', string, re.IGNORECASE)\n",
     "\n",
     "if match:                      \n",
-    "    print('found', mat.group())\n",
+    "    print('Found... '+ match.group())\n",
     "else:\n",
-    "    print('did not find')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Findall"
+    "    print('Did not find')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(11, 19), match='word:cat'>"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "re.Match"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(match)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# starting index of the matching term\n",
+    "match.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# end index of the matching term\n",
+    "match.end()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11, 19)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match.span()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "word:cat\n",
+      "word:cat\n",
+      "word\n",
+      "cat\n"
+     ]
+    }
+   ],
+   "source": [
+    "# group(0) is the full match and works same as group()\n",
+    "print(match.group())\n",
+    "print(match.group(0))\n",
+    "print(match.group(1))\n",
+    "print(match.group(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting with regex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['What is the domain name of someone with the email: hello', 'gmail.com']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Term to split on\n",
+    "split_term = '@'\n",
+    "\n",
+    "phrase = 'What is the domain name of someone with the email: hello@gmail.com'\n",
+    "\n",
+    "# Split the phrase\n",
+    "re.split(split_term, phrase)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Findall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 emails found.\n",
       "alice@google.com\n",
       "bob@abc.com\n"
      ]
@@ -71,16 +235,18 @@
     "demotext = '''purple alice@google.com, blah monkey bob@abc.com blah dishwasher'''\n",
     "\n",
     "## Here re.findall() returns a list of all the found email strings\n",
-    "emails = re.findall(r'[\\w.-]+@[\\w.-]+', demotext) ## ['alice@google.com', 'bob@abc.com']\n",
-    "  \n",
+    "emails = re.findall(r'[\\w.-]+@[\\w.-]+', demotext)\n",
+    "## ['alice@google.com', 'bob@abc.com']\n",
+    "\n",
+    "print(len(emails), 'emails found.')\n",
+    "\n",
     "for email in emails:\n",
-    "    # do something with each found email string\n",
     "    print(email)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +259,9 @@
    ],
    "source": [
     "string='''\n",
-    "hi there Abhinav, 21 years old, Bill Gates 82 years old, Jezz Bezos 53 yo\n",
+    "hi there Abhinav, 21 years old, \n",
+    "Bill Gates 82 years old, \n",
+    "Jezz Bezos 53 yo\n",
     "'''\n",
     "ages = re.findall(r'\\d{1,3}',string)\n",
     "names = re.findall(r'[A-Z][a-z]*',string)\n",
@@ -102,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +285,6 @@
     "message = 'call me at 888-444-1344 tom or at 432-334-4444 today'\n",
     "phonereg = re.compile(r'\\d\\d\\d-\\d\\d\\d-\\d\\d\\d\\d')\n",
     "matchobject = phonereg.findall(message)\n",
-    "#print(matchobject.group())\n",
     "print(matchobject)"
    ]
   },
@@ -131,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +459,7 @@
        "  '')]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,13 +518,6 @@
     "strings = re.findall(r'some pattern', f.read())\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
