--- a/Questions/Leetcode/617. Merge Two Binary Trees [easy].ipynb
+++ b/Questions/Leetcode/617. Merge Two Binary Trees [easy].ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,12 +159,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recursive"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
+    "class Solution_Recursive:\n",
     "    def mergeTrees(self, t1: TreeNode, t2: TreeNode) -> TreeNode:\n",
     "        if not t1 or not t2:\n",
     "            return t1 or t2\n",
@@ -177,17 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = Solution()\n",
-    "answer = a.mergeTrees(a_node, c_node)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -204,6 +201,72 @@
     }
    ],
    "source": [
+    "a = Solution_Recursive()\n",
+    "answer = a.mergeTrees(a_node, c_node)\n",
+    "answer.bfs()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution_Iterative:\n",
+    "    def mergeTrees(self, t1: TreeNode, t2: TreeNode) -> TreeNode:\n",
+    "        if not t1 or not t2:\n",
+    "            return t1 or t2\n",
+    "\n",
+    "        stack = [(t1, t2)]\n",
+    "        head = t2\n",
+    "\n",
+    "        while stack:\n",
+    "            t1, t2 = stack.pop()\n",
+    "            t2.value += t1.value\n",
+    "\n",
+    "            # process the left child\n",
+    "            if t1.left_child and t2.left_child:\n",
+    "                stack.append((t1.left_child, t2.left_child))\n",
+    "            elif t1.left_child:\n",
+    "                t2.left_child = t1.left_child\n",
+    "\n",
+    "            # process the right child\n",
+    "            if t1.right_child and t2.right_child:\n",
+    "                stack.append((t1.right_child, t2.right_child))\n",
+    "            elif t1.right_child:\n",
+    "                t2.right_child = t1.right_child\n",
+    "\n",
+    "        return head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "4\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Solution_Iterative()\n",
+    "answer = a.mergeTrees(a_node, c_node)\n",
     "answer.bfs()"
    ]
   },
