more binary tree questions

--- a/Questions/Leetcode/617. Merge Two Binary Trees [easy].ipynb
+++ b/Questions/Leetcode/617. Merge Two Binary Trees [easy].ipynb
@@ -4,28 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Problem](https://leetcode.com/problems/merge-two-binary-trees/)\n",
+    "# TreeNode class\n",
+    "Definition for a binary tree node.\n",
     "\n",
-    "[Article](https://leetcode.com/articles/merge-two-binary-trees/)\n",
-    "\n",
+    "[Problem](https://leetcode.com/problems/merge-two-binary-trees/), \n",
+    "[Article](https://leetcode.com/articles/merge-two-binary-trees/), \n",
     "[Learn about Trees](https://medium.com/the-renaissance-developer/learning-tree-data-structure-27c6bb363051)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Understand Trees"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from queue import Queue\n",
-    "# Definition for a binary tree node.\n",
     "class TreeNode:\n",
     "    def __init__(self, value):\n",
     "        self.value = value\n",
@@ -76,6 +68,7 @@
     "        print(self.value)\n",
     "    \n",
     "    def bfs(self):\n",
+    "        from queue import Queue\n",
     "        queue = Queue(maxsize=0)\n",
     "        queue.put(self)\n",
     "\n",
@@ -92,10 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Making a tree\n",
+    "\n",
     "a_node = TreeNode('a')\n",
     "a_node.insert_left('b')\n",
     "a_node.insert_right('e')\n",
@@ -119,6 +114,13 @@
     "# print(d_node.value) # d\n",
     "# print(e_node.value) # e\n",
     "# print(f_node.value) # f "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Tree](https://www.geeksforgeeks.org/wp-content/uploads/Preorder-from-Inorder-and-Postorder-traversals.jpg)"
    ]
   },
   {
