--- a/Libraries/web scraping/Download CBSE Results (selenium).ipynb
+++ b/Libraries/web scraping/Download CBSE Results (selenium).ipynb
@@ -355,6 +355,8 @@
    "source": [
     "import os\n",
     "from selenium import webdriver\n",
+    "\n",
+    "# Download latest driver here: https://chromedriver.chromium.org/downloads\n",
     "browser = webdriver.Chrome(executable_path=os.path.join(os.getcwd(),'webdriver','chromedriver.exe'))\n",
     "browser.get('http://resultsarchives.nic.in/cbseresults/cbseresults2013/class12/cbse122013.htm')\n",
     "\n",
